tests/ui/borrowck/borrowck-while-break.stderr
error[E0381]: used binding `v` is possibly-uninitialized
  --> $DIR/borrowck-while-break.rs:7:20
   |
LL |     let v;
   |         - binding declared here but left uninitialized
LL |     while cond {
   |           ---- if this condition isn't met and the `while` loop runs 0 times, `v` is not initialized
...
LL |     println!("{}", v);
   |     ---------------^-
   |     |              |
   |     |              `v` used here but it is possibly-uninitialized
   |     in this macro invocation (#1)
  --> $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this expansion of `println!` (#1)
  ::: $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this macro invocation (#2)
  --> $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
   = note: in this expansion of `$crate::format_args_nl!` (#2)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
